# checkerboard_detection

./: .gitignore  CMakeLists.txt  cmake_install.cmake  logitech_calibration.yaml~  mainpage.dox  manifest.xml  package.xml
cfg/: calibrationdata_0007481300c4d6d4.yml  pose.yml
cfg/.svn/: all-wcprops  entries
include/: estimate_pose.h
include/.svn/: all-wcprops  entries
include/.svn/text-base/: estimate_pose.h.svn-base
launch/: demo_boardpose.launch  demo_camerapose.launch  demo_camerapose.vcg  kinect_camerapose.launch  kinect_camerapose.launch~  kinect_camerapose_2.launch  mico_4x4_board.launch  object_boardpose.launch  object_boardpose.launch~  wrist_boardpose.launch
launch/.svn/: all-wcprops  entries
launch/.svn/text-base/: demo_boardpose.launch.svn-base  demo_camerapose.launch.svn-base  static_pose.launch.svn-base
src/: estimate_pose.cpp
src/.svn/: all-wcprops  entries
srv/.svn/: all-wcprops  entries
